--- a/devwareProject/src/main/webapp/resources/css/board/main.css
+++ b/devwareProject/src/main/webapp/resources/css/board/main.css
@@ -250,25 +250,6 @@ select {
   /* 1 */
   text-transform: none;
 }
-select {
-	width: 200px;
-	height: 67px;
-	
-	border: none;
-	border-radius: 0;
-	-webkit-apperance:none;
-	-moz-apperance:none;
-	vertical-align: middle;
-	
-}
-
-option{
-
-}
-
-select::-ms-expand {
-        
-}
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -508,7 +489,7 @@ legend {
 .choices[data-type*="select-one"] .choices__input {
   display: block;
   width: 100%;
-/*   padding: 10px; */
+  padding: 10px;
   border-bottom: 1px solid #DDDDDD;
   background-color: #FFFFFF;
   margin: 0;
@@ -800,19 +781,19 @@ legend {
 }
 
 .choices__input {
-  display: inline-block ;
-  vertical-align: baseline ;
-  background-color: #f9f9f9 ;
-  font-size: 14px ;
-  margin-bottom: 5px ;
-  border: 0 ;
-  border-radius: 0 ;
-  max-width: 100% ;
-  padding: 4px 0 4px 2px ;
+  display: inline-block;
+  vertical-align: baseline;
+  background-color: #f9f9f9;
+  font-size: 14px;
+  margin-bottom: 5px;
+  border: 0;
+  border-radius: 0;
+  max-width: 100%;
+  padding: 4px 0 4px 2px;
 }
 
 .choices__input:focus {
-  outline: 0 ;
+  outline: 0;
 }
 
 [dir="rtl"] .choices__input {
@@ -830,13 +811,8 @@ legend {
 }
 
 .s003 {
-  
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
+  min-height: 100vh;
+  align-items: center;
   font-family: 'Poppins', sans-serif;
   padding: 15px;
 }
@@ -844,7 +820,7 @@ legend {
 .s003 form {
   width: 100%;
   max-width: 790px;
-  margin-bottom: 0;
+  margin-left: 25%; 
 }
 
 .s003 form .inner-form {
@@ -866,7 +842,6 @@ legend {
 
 .s003 form .inner-form .input-field input {
   height: 100%;
-  background: transparent;
   border: 0;
   display: block;
   width: 100%;
@@ -897,77 +872,77 @@ legend {
 }
 
 .s003 form .inner-form .input-field.first-wrap {
-  width: 200px ; 
-  border-right: 1px solid rgba(0, 0, 0, 0.1) ;
+  width: 200px;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__inner {
-  background: transparent ; 
-  border-radius: 0 ;
-  border: 0 ;
-  height: 100% ;
-  color: #fff ;
-  display: -ms-flexbox ;
-  display: flex ;
-  -ms-flex-align: center ;
-      align-items: center ;
-  padding: 10px 30px ;
+  background: transparent;
+  border-radius: 0;
+  border: 0;
+  height: 100%;
+  color: #fff;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 10px 30px;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
-  display: -ms-flexbox ;
-  display: flex ;
-  padding: 0 ;
-  -ms-flex-align: center ;
-      align-items: center ;
-  height: 100% ;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 100%;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
-  display: -ms-flexbox ;
-  display: flex ;
-  -ms-flex-align: center ;
-      align-items: center ;
-  height: 100% ;
-  opacity: 1 ;
-  color: #888 ;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 100%;
+  opacity: 1;
+  color: #888;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
-  display: -ms-flexbox ;
-  display: flex ;
-  -ms-flex-align: center ;
-      align-items: center ;
-  height: 100% ;
-  color: #555 ;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 100%;
+  color: #555;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
-  right: 30px ;
-  border-color: #e5e5e5 transparent transparent transparent ;
+  right: 30px;
+  border-color: #e5e5e5 transparent transparent transparent;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
-  border: 0 ;
-  background: #fff ;
-  padding: 20px 30px ;
-  margin-top: 2px ;
-  border-radius: 4px ;
-  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15) ;
+  border: 0;
+  background: #fff;
+  padding: 20px 30px;
+  margin-top: 2px;
+  border-radius: 4px;
+  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
-  padding-right: 0 ;
+  padding-right: 0;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
-  background: #fff ;
-  color: #63c76a ;
+  background: #fff;
+  color: #63c76a;
 }
 
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
-  color: #555 ;
-  min-height: 24px ;
+  color: #555;
+  min-height: 24px;
 }
 
 .s003 form .inner-form .input-field.second-wrap {
